Bugfix/fix cors mvp dev (#7)
* feat:
   - validate JWT on protected routes
   - return standardized 401 for missing, invalid, expired, or inactive-user tokens
   - keep public routes open for auth, register, healthcheck, and swagger
   - add integration tests for protected and public route authentication

* feat:
   - refactor api domains and consolidate controller contracts