@@ -22,7 +22,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("controle_ja_api/v1/gas-stations")
@@ -31,23 +30,43 @@ public class GasStationController {
     private final GasStationService gasStationService;
     private final GasStationRankingService rankingService;
 
+    /**
+     * Cria um posto de combustível para o usuário autenticado.
+     */
     @PostMapping
     public ResponseEntity<GasStationResponseDTO> create(@RequestBody @Valid GasStationDTO dto) {
         return ResponseEntity.ok(GasStationResponseDTO.toDTO(gasStationService.createGasStation(dto)));
     }
 
+    /**
+     * Lista os postos ativos do usuário autenticado.
+     */
     @GetMapping
     public ResponseEntity<List<GasStationResponseDTO>> listAll() {
         return ResponseEntity.ok(gasStationService.listMyGasStations().stream()
                 .map(GasStationResponseDTO::toDTO)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
+    /**
+     * Consulta um posto ativo garantindo propriedade do usuário autenticado.
+     */
+    @GetMapping("/{id}")
+    public ResponseEntity<GasStationResponseDTO> getById(@PathVariable UUID id) {
+        return ResponseEntity.ok(GasStationResponseDTO.toDTO(gasStationService.findMyGasStationById(id)));
+    }
+
+    /**
+     * Atualiza os dados cadastrais do posto.
+     */
     @PutMapping("/{id}")
     public ResponseEntity<GasStationResponseDTO> update(@PathVariable UUID id, @RequestBody @Valid GasStationDTO dto) {
         return ResponseEntity.ok(GasStationResponseDTO.toDTO(gasStationService.updateGasStation(id, dto)));
     }
 
+    /**
+     * Remove logicamente o posto.
+     */
     @DeleteMapping("/{id}")
     public ResponseEntity<?> delete(@PathVariable UUID id) {
         gasStationService.softDelete(id);
@@ -56,6 +75,9 @@ public class GasStationController {
         return ResponseEntity.ok(response);
     }
 
+    /**
+     * Lista ranking dos postos do usuário baseado nos abastecimentos com KM/L confiável.
+     */
     @GetMapping("/ranking")
     public ResponseEntity<List<GasStationRankingResponseDTO>> getRanking() {
         return ResponseEntity.ok(rankingService.getMyRankings());
